--- a/blog/blog.css
+++ b/blog/blog.css
@@ -1,11 +1,7 @@
-@font-face {
-    font-family: abc;
-    src: url(./font/Quicksand-VariableFont_wght.ttf);
-}
 *{
     padding: 0;
     margin: 0;
-    font-family: abc;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .container{
