--- a/frequety/frequety.css
+++ b/frequety/frequety.css
@@ -1,11 +1,7 @@
-@font-face {
-    font-family: abc;
-    src: url(./font/Quicksand-VariableFont_wght.ttf);
-}
 *{
     padding: 0;
     margin: 0;
-    font-family: abc;
+    font-family: 'Quicksand', sans-serif;
 }
 h1{
     text-align: center;
@@ -15,7 +11,7 @@ h1{
     margin: auto;
     padding-bottom: 10px;
     color: #89705b;
-    font-weight: 800;
+    font-weight: 700;
 
 }
 h1::before{
