--- a/blog/blog.css
+++ b/blog/blog.css
@@ -16,6 +16,7 @@ h1{
     margin: auto;
     padding-bottom: 10px;
     color: #89705b;
+    font-weight: 700;
 }
 
 h3{
@@ -31,7 +32,7 @@ h3{
     width: 77.5%;
     margin: auto;
     /* background-color: skyblue; */
-    height: 800px;
+    height: 1100px;
     margin-top: 50px;
 }
 .container__group-flex{
@@ -97,6 +98,7 @@ h3{
     text-transform: uppercase;
     font-size: 19px;
     background-color: #89705b;
+    font-weight: 700;
 }
 
 
